Добавлен докер, и работа с файлами