@@ -12,7 +12,13 @@ import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import javax.validation.ValidationException;
+import java.io.*;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.LinkedBlockingQueue;
+import java.util.concurrent.ThreadPoolExecutor;
+import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,14 +32,61 @@ public class NewsServiceImpl implements NewsService {
     }
 
     @Override
+    public NewsDataDto addNewsDataFromFile() {
+        try {
+            BufferedReader reader = new BufferedReader(new InputStreamReader(new FileInputStream
+                    ("D:\\Java-разработчик\\newsData\\тестовые данные.csv")));
+            String line = reader.readLine();
+            while (line != null) {
+                line = reader.readLine();
+                String[] data = line.split(";");
+                NewsDataDto newsDataDto = new NewsDataDto(data[0], data[1], data[2]);
+                addNewsData(newsDataDto);
+            }
+        } catch (FileNotFoundException e) {
+            e.printStackTrace();
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+        return null;
+    }
+
+    @Override
     public List<NewsDataDto> getListNewsDataDto(int from, int size) {
         int page = from / size;
         Pageable pageable = PageRequest.of(page, size, Sort.by("id").descending());
         Page<NewsData> pageNewsDataDto = newsRepository.findAll(pageable);
         List<NewsDataDto> listNewsDataDto =
-                pageNewsDataDto.stream().map(NewsDataMapper::toNewsDataDto).toList();
+                pageNewsDataDto.stream().map(NewsDataMapper::toNewsDataDto).collect(Collectors.toList());
         if (listNewsDataDto.isEmpty()) throw new ValidationException("Список новостных данных пуст!");
         return listNewsDataDto;
+    }
+
+    @Override
+    public void getNewDataStatistics() {
+        ThreadPoolExecutor executor = new ThreadPoolExecutor(2, 5, 1l,
+                TimeUnit.MILLISECONDS, new LinkedBlockingQueue<>(512));
+        executor.setRejectedExecutionHandler(new ThreadPoolExecutor.CallerRunsPolicy());
+        executor.submit(new Runnable() {
+            @Override
+            public void run() {
+                for (var source : getSource()) {
+                    StringBuilder sb = new StringBuilder();
+                    sb.append("источник").append(';').append("тема").
+                            append(';').append("Количество новостей").append('\n');
+                    try (PrintWriter writer = new PrintWriter(new File(source + ".csv"))) {
+                        for (var subjectMatter : getSubjectMatterInSource(source)) {
+                            sb.append(source).append(";").append(subjectMatter).append(";")
+                                    .append(newsRepository.getNewsInSubjectMatterNoPageable(subjectMatter).size())
+                                    .append('\n');
+                        }
+                        writer.write(sb.toString());
+                    } catch (FileNotFoundException e) {
+                        throw new RuntimeException(e);
+                    }
+                }
+            }
+        });
     }
 
     @Override
@@ -62,7 +115,7 @@ public class NewsServiceImpl implements NewsService {
     public List<String> getNewsAll(int from, int size) {
         int page = from / size;
         Pageable pageable = PageRequest.of(page, size, Sort.by("news").descending());
-        List<String> listNewsAll = newsRepository.findNewsAll(pageable).stream().toList();
+        List<String> listNewsAll = new ArrayList<>(newsRepository.findNewsAll(pageable));
         return listNewsAll;
     }
 
